--- a/BoCaoSui/TMDT_Web/TMDT_Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/BoCaoSui/TMDT_Web/TMDT_Web/Areas/Admin/Views/Order/Index.cshtml
@@ -96,7 +96,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Accept", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Accept Order</label>
                                             </form>
                                         </div>
@@ -105,7 +105,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Transport", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Trans</label>
                                             </form>
                                         </div>
@@ -114,7 +114,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Finish", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Finish</label>
                                             </form>
                                         </div>}
@@ -122,19 +122,21 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Cancel", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Cancel Order</label>
                                             </form>
-                                        </div>}
-                                    @if (item.Status == 4)
-                                    {
+                                        </div>
+                                    }
+                                    
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Detail", "Order", new { id = item.OrderID })">
                                                 <input type="submit" value="Xem" />
                                                 <label>Detail Order</label>
                                             </form>
-                                        </div>}
-                                    </div>
+                                        </div>
+                                    
+                                    @*<a href="@Url.Action("Detail","Order",new { id = item.OrderID})"><i class="fa fa-angle-right"></i> Đơn Hàng Đã Hủy</a>*@
+                                </div>
                             </td>
                         </tr>
                     }
@@ -183,7 +185,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Accept", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Accept Order</label>
                                             </form>
                                         </div>}
@@ -191,7 +193,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Transport", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Trans</label>
                                             </form>
                                         </div>}
@@ -199,7 +201,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Finish", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Finish</label>
                                             </form>
                                         </div>
@@ -208,20 +210,19 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Cancel", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Cancel Order</label>
                                             </form>
                                         </div>
                                     }
-                                    @if (item.Status == 4)
-                                    {
+                                    
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Detail", "Order", new { id = item.OrderID })">
                                                 <input type="submit" value="Xem" />
                                                 <label>Detail Order</label>
                                             </form>
                                         </div>
-                                    }
+                                    
                                 </div>
                             </td>
                         </tr>
