--- a/BoCaoSui/TMDT_Web/TMDT_Web/Areas/Admin/Views/Order/ordersTrans.cshtml
+++ b/BoCaoSui/TMDT_Web/TMDT_Web/Areas/Admin/Views/Order/ordersTrans.cshtml
@@ -97,7 +97,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Accept", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Accept Order</label>
                                             </form>
                                         </div>}
@@ -105,7 +105,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Transport", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Trans</label>
                                             </form>
                                         </div>}
@@ -113,7 +113,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Finish", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Finish</label>
                                             </form>
                                         </div>
@@ -122,20 +122,19 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Cancel", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Cancel Order</label>
                                             </form>
                                         </div>
                                     }
-                                    @if (item.Status == 4)
-                                    {
+                                    
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Detail", "Order", new { id = item.OrderID })">
                                                 <input type="submit" value="Xem" />
                                                 <label>Detail Order</label>
                                             </form>
                                         </div>
-                                    }
+                                    
                                 </div>
                             </td>
                         </tr>
@@ -185,7 +184,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Accept", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Accept Order</label>
                                             </form>
                                         </div>}
@@ -193,7 +192,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Transport", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Trans</label>
                                             </form>
                                         </div>}
@@ -201,7 +200,7 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Finish", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Finish</label>
                                             </form>
                                         </div>
@@ -210,20 +209,19 @@
                                     {
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Cancel", "Order", new { id = item.OrderID })">
-                                                <input type="submit" />
+                                                <input type="submit" value="OK"/>
                                                 <label>Cancel Order</label>
                                             </form>
                                         </div>
                                     }
-                                    @if (item.Status == 4)
-                                    {
+                                    
                                         <div class="col-sm-2">
                                             <form action="@Url.Action("Detail", "Order", new { id = item.OrderID })">
                                                 <input type="submit" value="Xem" />
                                                 <label>Detail Order</label>
                                             </form>
                                         </div>
-                                    }
+                                    
                                 </div>
                             </td>
                         </tr>
